kubernetes/main/platform/flux-tools/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/hostname: &hostname "headlamp.dcunha.lab"
spec:
  parentRefs:
    - name: gateway
      namespace: default
      sectionName: http
  hostnames:
    - *hostname
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
